add wxsearchproduct
