# controllers/main.go
@@ -4,7 +4,6 @@ import (
 	// "encoding/json"
 	"github.com/3xxx/engineercms/models"
 	"github.com/astaxie/beego"
-	"github.com/astaxie/beego/utils/pagination"
 	// "io"
 	// "encoding/json"
 	// "net/http"
@@ -13,10 +12,7 @@ import (
 	// "io/ioutil"
 	// "mime/multipart"
 	// "os"
-	"github.com/3xxx/engineercms/controllers/utils"
-	"path"
 	"regexp"
-	"strconv"
 	"strings"
 	"time"
 )
@@ -519,467 +515,6 @@ func (c *MainController) IsSubmitAgain(token string) bool {
 	return false
 }
 
-func (c *MainController) Pdf() {
-	// var uname, useridstring string
-	// v := c.GetSession("uname")
-	// var role, userrole int
-	// if v == nil {
-	// 	route := c.Ctx.Request.URL.String()
-	// 	c.Data["Url"] = route
-	// 	c.Redirect("/roleerr?url="+route, 302)
-	// 	return
-	// }
-	_, _, uid, _, _ := checkprodRole(c.Ctx)
-	if uid == 0 {
-		route := c.Ctx.Request.URL.String()
-		c.Data["Url"] = route
-		c.Redirect("/roleerr?url="+route, 302)
-		return
-	}
-	// c.TplName = "web/viewer.html"
-	// c.Data["IsLogin"] = checkAccount(c.Ctx)
-	// uname, _, _ := checkRoleread(c.Ctx) //login里的
-	// rolename, _ = strconv.Atoi(role)
-	// c.Data["Uname"] = uname
-	// Directory:github.com/astaxie/beego/context     Pakage in Source:context
-	// func (input *BeegoInput) IP() string {}
-	//c是TopicController,TopicController是beego.controller，即beego.controller.ctx.input.ip
-
-	// beego.Info(c.Ctx.Input.IP())
-
-	//取得附件的id——成果的id——目录的id——查询目录下所有pdf返回数量
-	// id := c.Input().Get("id")
-	// if id != "" {
-	// 	//id转成64为
-	// 	idNum, err = strconv.ParseInt(id, 10, 64)
-	// 	if err != nil {
-	// 		beego.Error(err)
-	// 	}
-	// }
-	//取得某个目录下所有pdf
-	// id := c.Ctx.Input.Param(":id")
-	// beego.Info(id)
-	var Url string
-	var pNum int64
-	id := c.Input().Get("id")
-	// beego.Info(id)
-	//id转成64为
-	idNum, err := strconv.ParseInt(id, 10, 64)
-	if err != nil {
-		beego.Error(err)
-	}
-	p := c.Input().Get("p")
-	// beego.Info(p)
-
-	var prods []*models.Product
-	var projid int64
-	if p == "" { //id是附件或成果id
-		attach, err := models.GetAttachbyId(idNum)
-		if err != nil {
-			beego.Error(err)
-		}
-		//由成果id（后台传过来的行id）取得成果——进行排序
-		prod, err := models.GetProd(attach.ProductId)
-		if err != nil {
-			beego.Error(err)
-		}
-		//由侧栏id取得所有成果和所有成果的附件pdf
-		prods, err = models.GetProducts(prod.ProjectId)
-		if err != nil {
-			beego.Error(err)
-		}
-		// beego.Info(prod.ProjectId)
-		//由proj id取得url
-		// Url, _, err = GetUrlPath(prod.ProjectId)
-		// if err != nil {
-		// 	beego.Error(err)
-		// }
-		// beego.Info(Url)
-		projid = prod.ProjectId
-	} else { //id是侧栏目录id
-		//由侧栏id取得所有成果和所有成果的附件pdf——进行排序
-		prods, err = models.GetProducts(idNum)
-		if err != nil {
-			beego.Error(err)
-		}
-		//由proj id取得url
-		Url, _, err = GetUrlPath(idNum)
-		if err != nil {
-			beego.Error(err)
-		}
-		// beego.Info(Url)
-		// projid = idNum
-		//id转成64为
-		pNum, err = strconv.ParseInt(p, 10, 64)
-		if err != nil {
-			beego.Error(err)
-		}
-	}
-
-	// c.Data["AttachmentId"] = id
-
-	// var idNum int64
-	// var err error
-
-	// if id != "" {
-
-	// var count int64
-	Attachments := make([]*models.Attachment, 0)
-	for _, v := range prods {
-		//根据成果id取得所有附件数量
-		// count1, err := models.GetAttachmentsCount(v.Id)
-		// if err != nil {
-		// 	beego.Error(err)
-		// }
-		// count = count + count1
-		Attachments1, err := models.GetAttachments(v.Id) //只返回Id?没意义，全部返回
-		if err != nil {
-			beego.Error(err)
-		}
-		for _, v := range Attachments1 {
-			if path.Ext(v.FileName) == ".pdf" || path.Ext(v.FileName) == ".PDF" {
-				Attachments = append(Attachments, Attachments1...)
-			}
-		}
-	}
-	//对成果进行循环
-	//赋予url
-	//如果是一个成果，直接给url;如果大于1个，则是数组:这个在前端实现
-	// http.ServeFile(ctx.ResponseWriter, ctx.Request, filePath)
-	// link := make([]AttachmentLink, 0)
-	// for _, v := range Attachments {
-	// 	if path.Ext(v.FileName) == ".pdf" || path.Ext(v.FileName) == ".PDF" {
-	// 		linkarr := make([]AttachmentLink, 1)
-	// 		linkarr[0].Id = v.Id
-	// 		linkarr[0].Title = v.FileName
-	// 		linkarr[0].FileSize = v.FileSize
-	// 		linkarr[0].Downloads = v.Downloads
-	// 		linkarr[0].Created = v.Created
-	// 		linkarr[0].Updated = v.Updated
-	// 		linkarr[0].Link = Url + "/" + v.FileName
-	// 		link = append(link, linkarr...)
-	// 	}
-	// }
-	// c.Data["json"] = link
-	// pdfs, err := models.GetAllPdfs(idNum, false)
-	// if err != nil {
-	// 	beego.Error(err)
-	// }
-	count := len(Attachments)
-	count1 := strconv.Itoa(count)
-	count2, err := strconv.ParseInt(count1, 10, 64)
-	if err != nil {
-		beego.Error(err)
-	}
-	// cnt, err := o.QueryTable("user").Count()
-	// if err != nil {
-	// 	beego.Error(err)
-	// }
-	// sets this.Data["paginator"] with the current offset (from the url query param)
-	postsPerPage := 1
-	paginator := pagination.SetPaginator(c.Ctx, postsPerPage, count2)
-	// fmt.Println(*c.Ctx)
-	// beego.Info(c.Ctx)
-	// beego.Info(paginator.Offset())   0
-	// p := pagination.NewPaginator(c.Ctx.Request, 10, 9)
-	// beego.Info(p.Offset())   0
-	// fetch the next 20 posts
-	//根据paginator.Offset()序列，取得附件
-	// Attachments := make([]*models.Attachment, 0)
-	// for _, v := range prod {
-	// 	//根据成果id取得所有附件id
-	// 	Attachments1, err := models.GetAttachments(v.Id) //只返回Id?没意义，全部返回
-	// 	if err != nil {
-	// 		beego.Error(err)
-	// 	}
-	// 	Attachments = append(Attachments, Attachments1...)
-	// }
-	//查询当前附件id所在位置
-	// var p1, PdfLink string
-	// for i, v := range Attachments {
-	// 	if v.Id == idNum {
-	// 		p1 = strconv.Itoa(i)
-	// 		PdfLink = Url + "/" + v.FileName
-	// 		break
-	// 	}
-	// }
-	// pdfs, err = models.ListPostsByOffsetAndLimit(paginator.Offset(), postsPerPage)
-	// if err != nil {
-	// 	beego.Error(err)
-	// }
-	//这里根据上面取得的分页topics，取出这页的成果对应的所有项目
-	// slice1 := make([]models.Category, 0)
-	// for _, v := range topics {
-	// 	tid := strconv.FormatInt(v.Id, 10)
-	// 	category, err := models.GetTopicProj(tid)
-	// 	if err != nil {
-	// 		beego.Error(err)
-	// 	}
-	// beego.Info(category.Title)
-	// 	aa := make([]models.Category, 1)
-	// 	aa[0].Author = category.Title//这句出错，不知何故runtime error: invalid memory address or nil pointer dereference
-	// 	slice1 = append(slice1, aa...)
-	// }
-	// c.Data["Categories"] = slice1
-	c.Data["paginator"] = paginator
-	if p == "" {
-		var p1 string
-		for i, v := range Attachments {
-			if v.Id == idNum {
-				p1 = strconv.Itoa(i + 1)
-				// PdfLink = Url + "/" + v.FileName
-				break
-			}
-		}
-		c.Redirect("/pdf?p="+p1+"&id="+strconv.FormatInt(projid, 10), 302)
-	} else {
-		PdfLink := Url + "/" + Attachments[pNum-1].FileName
-		// beego.Info(PdfLink)
-		c.Data["PdfLink"] = PdfLink
-		c.TplName = "web/viewer.html"
-	}
-	// logs := logs.NewLogger(1000)
-	// logs.SetLogger("file", `{"filename":"log/test.log"}`)
-	// logs.EnableFuncCallDepth(true)
-	// logs.Info(c.Ctx.Input.IP() + " " + "ListAllTopic")
-	// logs.Close()
-	// count, _ := models.M("logoperation").Alias(`op`).Field(`count(op.id) as count`).Where(where).Count()
-	// if count > 0 {
-	// 	pagesize := 10
-	// 	p := tools.NewPaginator(this.Ctx.Request, pagesize, count)
-	// 	log, _ := models.M("logoperation").Alias(`op`).Where(where).Limit(strconv.Itoa(p.Offset()), strconv.Itoa(pagesize)).Order(`op.id desc`).Select()
-	// 	this.Data["data"] = log
-	// 	this.Data["paginator"] = p
-	// }
-}
-
-// @Title dowload wx pdf
-// @Description get wx pdf by id
-// @Param id path string  true "The id of pdf"
-// @Success 200 {object} models.GetAttachbyId
-// @Failure 400 Invalid page supplied
-// @Failure 404 pdf not found
-// @router /wxpdf/:id [get]
-// 有权限判断
-func (c *MainController) WxPdf() {
-	// var openID string
-	// openid := c.GetSession("openID")
-	// beego.Info(openid)
-	// if openid == nil {
-
-	// } else {
-	// 	openID = openid.(string)
-	// }
-	openID := c.GetSession("openID")
-	beego.Info(openID)
-	if openID != nil {
-		user, err := models.GetUserByOpenID(openID.(string))
-		if err != nil {
-			beego.Error(err)
-		} else {
-			useridstring := strconv.FormatInt(user.Id, 10)
-			// 判断用户是否具有权限。
-			id := c.Ctx.Input.Param(":id")
-			//pid转成64为
-			idNum, err := strconv.ParseInt(id, 10, 64)
-			if err != nil {
-				beego.Error(err)
-			}
-
-			//根据附件id取得附件的prodid，路径
-			attachment, err := models.GetAttachbyId(idNum)
-			if err != nil {
-				beego.Error(err)
-			}
-
-			product, err := models.GetProd(attachment.ProductId)
-			if err != nil {
-				beego.Error(err)
-			}
-			//根据projid取出路径
-			proj, err := models.GetProj(product.ProjectId)
-			if err != nil {
-				beego.Error(err)
-				utils.FileLogs.Error(err.Error())
-			}
-			var projurl string
-			if proj.ParentIdPath == "" || proj.ParentIdPath == "$#" {
-				projurl = "/" + strconv.FormatInt(proj.Id, 10) + "/"
-			} else {
-				projurl = "/" + strings.Replace(strings.Replace(proj.ParentIdPath, "#", "/", -1), "$", "", -1) + strconv.FormatInt(proj.Id, 10) + "/"
-			}
-			//由proj id取得url
-			fileurl, _, err := GetUrlPath(product.ProjectId)
-			if err != nil {
-				beego.Error(err)
-			}
-			fileext := path.Ext(attachment.FileName)
-			if e.Enforce(useridstring, projurl, c.Ctx.Request.Method, fileext) {
-				c.Ctx.Output.Download(fileurl + "/" + attachment.FileName)
-			}
-		}
-	} else {
-		c.Data["json"] = "未查到openID"
-		c.ServeJSON()
-	}
-}
-
-// @Title dowload wx pdf
-// @Description get wx pdf by id
-// @Param id path string  true "The id of pdf"
-// @Success 200 {object} models.GetAttachbyId
-// @Failure 400 Invalid page supplied
-// @Failure 404 pdf not found
-// @router /getwxpdf/:id [get]
-// 查阅防腐资料，不用权限判断
-func (c *MainController) GetWxPdf() {
-	id := c.Ctx.Input.Param(":id")
-	//pid转成64为
-	idNum, err := strconv.ParseInt(id, 10, 64)
-	if err != nil {
-		beego.Error(err)
-	}
-
-	//根据附件id取得附件的prodid，路径
-	attachment, err := models.GetAttachbyId(idNum)
-	if err != nil {
-		beego.Error(err)
-	}
-
-	product, err := models.GetProd(attachment.ProductId)
-	if err != nil {
-		beego.Error(err)
-	}
-
-	//由proj id取得url
-	fileurl, _, err := GetUrlPath(product.ProjectId)
-	if err != nil {
-		beego.Error(err)
-		c.Data["json"] = "未查到openID"
-		c.ServeJSON()
-	} else {
-		c.Ctx.Output.Download(fileurl + "/" + attachment.FileName)
-	}
-}
-
-// @Title dowload wx standardpdf
-// @Description get wx standardpdf by id
-// @Param id path string  true "The id of standardpdf"
-// @Success 200 {object} models.GetAttachbyId
-// @Failure 400 Invalid page supplied
-// @Failure 404 pdf not found
-// @router /wxstandardpdf/:id [get]
-// 小程序查询规范
-func (c *MainController) WxStandardPdf() {
-	// id := c.Input().Get("id")
-	id := c.Ctx.Input.Param(":id")
-	//pid转成64为
-	idNum, err := strconv.ParseInt(id, 10, 64)
-	if err != nil {
-		beego.Error(err)
-	}
-	//根据id取得规范的路径
-	standard, err := models.GetStandard(idNum)
-	if err != nil {
-		beego.Error(err)
-	}
-	// beego.Info(standard.Route)
-	fileurl := strings.Replace(standard.Route, "/attachment/", "attachment/", -1)
-	// http.ServeFile(c.Ctx.ResponseWriter, c.Ctx.Request, standard.Route)
-	c.Ctx.Output.Download(fileurl)
-}
-
-// @Title get wx pdf list
-// @Description get pdf by page
-// @Param keyword query string  false "The keyword of pdf"
-// @Param projectid query string  false "The projectid of pdf"
-// @Param searchpage query string  true "The page for pdf list"
-// @Success 200 {object} models.GetProductsPage
-// @Failure 400 Invalid page supplied
-// @Failure 404 pdf not found
-// @router /getwxpdflist [get]
-// 小程序取得某个项目目录下的所有pdf，分页
-// 结合搜索来用
-func (c *MainController) GetWxPdfList() {
-	// wxsite := beego.AppConfig.String("wxreqeustsite")
-	limit := "6"
-	limit1, err := strconv.ParseInt(limit, 10, 64)
-	if err != nil {
-		beego.Error(err)
-	}
-	page := c.Input().Get("searchpage")
-	page1, err := strconv.ParseInt(page, 10, 64)
-	if err != nil {
-		beego.Error(err)
-	}
-	var offset int64
-	if page1 <= 1 {
-		offset = 0
-	} else {
-		offset = (page1 - 1) * limit1
-	}
-
-	key := c.Input().Get("keyword")
-	var products []*models.Product
-
-	pid := c.Input().Get("projectid")
-	// beego.Info(pid)
-	var pidNum int64
-	if pid != "" && key == "" {
-		pidNum, err = strconv.ParseInt(pid, 10, 64)
-		if err != nil {
-			beego.Error(err)
-		}
-		products, err = models.SearchProjProductPage(pidNum, limit1, offset, "")
-		if err != nil {
-			beego.Error(err.Error)
-		}
-	} else if pid != "" && key != "" {
-		pidNum, err = strconv.ParseInt(pid, 10, 64)
-		if err != nil {
-			beego.Error(err)
-		}
-		products, err = models.SearchProjProductPage(pidNum, limit1, offset, key)
-		if err != nil {
-			beego.Error(err.Error)
-		}
-	} else {
-		c.Data["json"] = map[string]interface{}{"info": "关键字或项目为空"}
-		c.ServeJSON()
-		return
-	}
-	Pdfslice := make([]PdfLink, 0)
-	for _, w := range products {
-		Attachments, err := models.GetAttachments(w.Id)
-		if err != nil {
-			beego.Error(err)
-		}
-		//对成果进行循环
-		//赋予url
-		for _, v := range Attachments {
-			if path.Ext(v.FileName) == ".pdf" || path.Ext(v.FileName) == ".PDF" {
-				pdfarr := make([]PdfLink, 1)
-				pdfarr[0].Id = v.Id
-				pdfarr[0].Title = v.FileName
-				if pidNum == 25002 { //图
-					pdfarr[0].Link = "data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2232%22%20height%3D%2232%22%3E%3Crect%20fill%3D%22%233F51B5%22%20x%3D%220%22%20y%3D%220%22%20width%3D%22100%25%22%20height%3D%22100%25%22%3E%3C%2Frect%3E%3Ctext%20fill%3D%22%23FFF%22%20x%3D%2250%25%22%20y%3D%2250%25%22%20text-anchor%3D%22middle%22%20font-size%3D%2216%22%20font-family%3D%22Verdana%2C%20Geneva%2C%20sans-serif%22%20alignment-baseline%3D%22middle%22%3E%E5%9B%BE%3C%2Ftext%3E%3C%2Fsvg%3E" //wxsite + "/static/img/go.jpg" //当做微信里的src来用
-					pdfarr[0].ActIndex = "drawing"
-				} else { //纪
-					pdfarr[0].Link = "data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%2232%22%20height%3D%2232%22%3E%3Crect%20fill%3D%22%23009688%22%20x%3D%220%22%20y%3D%220%22%20width%3D%22100%25%22%20height%3D%22100%25%22%3E%3C%2Frect%3E%3Ctext%20fill%3D%22%23FFF%22%20x%3D%2250%25%22%20y%3D%2250%25%22%20text-anchor%3D%22middle%22%20font-size%3D%2216%22%20font-family%3D%22Verdana%2C%20Geneva%2C%20sans-serif%22%20alignment-baseline%3D%22middle%22%3E%E7%BA%AA%3C%2Ftext%3E%3C%2Fsvg%3E" //wxsite + "/static/img/go.jpg" //当做微信里的src来用
-					pdfarr[0].ActIndex = "other"
-				}
-				pdfarr[0].Created = v.Created
-				// timeformatdate, _ := time.Parse(datetime, thisdate)
-				// const lll = "2006-01-02 15:04"
-				pdfarr[0].Updated = v.Updated //.Format(lll)
-				Pdfslice = append(Pdfslice, pdfarr...)
-			}
-		}
-	}
-	c.Data["json"] = map[string]interface{}{"info": "SUCCESS", "searchers": Pdfslice}
-	c.ServeJSON()
-}
-
 //升级数据库
 func (c *MainController) UpdateDatabase() {
 	beego.Info("ok")
@@ -1017,4 +552,8 @@ func (c *MainController) ModifyDatabase() {
 	}
 	c.Data["json"] = err
 	c.ServeJSON()
+}
+
+func (c *MainController) Autodesk() {
+	c.TplName = "autodeskview.tpl"
 }
